<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_nfc"
        android:icon="@drawable/ic_nfc_black_48dp"
        android:title="@string/title_nfc" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_person_pin_24"
        android:title="@string/title_profile" />



</menu>